[gd_scene load_steps=66 format=3 uid="uid://cvlps0q7qnfou"]

[ext_resource type="Script" uid="uid://ob5jukhgu1t4" path="res://src/start_screen.gd" id="1_eftrj"]
[ext_resource type="Texture2D" uid="uid://bmiekdb8xu253" path="res://assets/gfx/title/title/title1.png" id="1_ex27u"]
[ext_resource type="Texture2D" uid="uid://bdvalh5hn6lc4" path="res://assets/gfx/title/title/title2.png" id="2_vmynn"]
[ext_resource type="Texture2D" uid="uid://cyqx80ebp7t1s" path="res://assets/gfx/title/title/title3.png" id="3_edyp1"]
[ext_resource type="Texture2D" uid="uid://lv48bbbqviw4" path="res://assets/gfx/title/title/title4.png" id="4_h1k4c"]
[ext_resource type="Texture2D" uid="uid://bnpoipkcqruqu" path="res://assets/gfx/title/title/title5.png" id="5_vf0nx"]
[ext_resource type="Texture2D" uid="uid://bjnu2bxm1mtwd" path="res://assets/gfx/title/title/title6.png" id="6_rk0lv"]
[ext_resource type="Texture2D" uid="uid://cj41yss2uan37" path="res://assets/gfx/title/title/title7.png" id="7_bhn2e"]
[ext_resource type="Texture2D" uid="uid://sl27xl0ckspd" path="res://assets/gfx/title/title/title8.png" id="8_8y2w8"]
[ext_resource type="Texture2D" uid="uid://b884k2jk4u2ec" path="res://assets/gfx/title/title/title9.png" id="9_q1635"]
[ext_resource type="Texture2D" uid="uid://bvnvrq082qixh" path="res://assets/gfx/title/title/title10.png" id="10_2omyj"]
[ext_resource type="Texture2D" uid="uid://b858sjg16x02g" path="res://assets/gfx/title/title/title11.png" id="11_57ewf"]
[ext_resource type="Texture2D" uid="uid://caki24mepo3h0" path="res://assets/gfx/title/title/title12.png" id="12_virjh"]
[ext_resource type="Texture2D" uid="uid://f8laxbuoitfb" path="res://assets/gfx/title/title/title13.png" id="13_7e1k7"]
[ext_resource type="Texture2D" uid="uid://bpsipo78fhfgp" path="res://assets/gfx/title/title/title14.png" id="14_2ha8f"]
[ext_resource type="Texture2D" uid="uid://chugbgq2kgxyj" path="res://assets/gfx/title/title/title15.png" id="15_xro4g"]
[ext_resource type="Texture2D" uid="uid://dcu4q3bjws6ko" path="res://assets/gfx/title/title/title16.png" id="16_alte8"]
[ext_resource type="Texture2D" uid="uid://d2op45bceiyw3" path="res://assets/gfx/title/title/title17.png" id="17_173g2"]
[ext_resource type="Texture2D" uid="uid://bl1qqxcaifyya" path="res://assets/gfx/title/title/title18.png" id="18_p5q7p"]
[ext_resource type="Texture2D" uid="uid://b10hrhr1wc7n4" path="res://assets/gfx/title/title/title19.png" id="19_kfmhj"]
[ext_resource type="Texture2D" uid="uid://gss2kv5n2ar3" path="res://assets/gfx/title/title/title20.png" id="20_oj31q"]
[ext_resource type="Texture2D" uid="uid://cjhfij1iwf74b" path="res://assets/gfx/title/title/title21.png" id="22_e4ar7"]
[ext_resource type="Texture2D" uid="uid://dvcyb584hqot6" path="res://assets/gfx/ui/slider_grabber.png" id="22_l5lr2"]
[ext_resource type="Texture2D" uid="uid://c52sllhu5qjb6" path="res://assets/gfx/title/UI-title.png" id="22_ud1aq"]
[ext_resource type="Texture2D" uid="uid://dajfmry85558m" path="res://assets/gfx/title/title/title22.png" id="23_escde"]
[ext_resource type="FontFile" uid="uid://bjm5umnjo1est" path="res://assets/fonts/font-menu-UI-20px-portable_tube/PortableTube.ttf" id="23_leh6x"]
[ext_resource type="PackedScene" uid="uid://to3p8qv7p8yo" path="res://addons/sj/components/ui/settings/volume_slider.tscn" id="24_7gifx"]
[ext_resource type="AudioStream" uid="uid://11677xre8rtj" path="res://assets/sfx/UI_Button_1.wav" id="24_fmnmr"]
[ext_resource type="Texture2D" uid="uid://ce78hl3506jgl" path="res://assets/gfx/title/title/title23.png" id="24_m7ugp"]
[ext_resource type="Texture2D" uid="uid://b21j5lky8mu6o" path="res://assets/gfx/title/title/title24.png" id="25_bxwna"]
[ext_resource type="AudioStream" uid="uid://lbuwv71j81k" path="res://assets/sfx/UI_Button_2.wav" id="25_l2ewj"]
[ext_resource type="AudioStream" uid="uid://b72gxnfohwqko" path="res://assets/sfx/UI_Button_3.wav" id="26_4t44w"]
[ext_resource type="Texture2D" uid="uid://brmol2scg8nwb" path="res://assets/gfx/title/title/title25.png" id="26_yuvyo"]
[ext_resource type="AudioStream" uid="uid://dnpkscn0nhp0u" path="res://assets/sfx/UI_Button_4.wav" id="27_8sg8g"]
[ext_resource type="Texture2D" uid="uid://dy4xamcsuh0vr" path="res://assets/gfx/title/title/title26.png" id="27_d8frf"]
[ext_resource type="Texture2D" uid="uid://b66g8om5itkqe" path="res://assets/gfx/title/title/title27.png" id="28_5vp6r"]
[ext_resource type="Texture2D" uid="uid://dbxckd15l5g23" path="res://assets/gfx/title/title/title28.png" id="29_r3lx2"]
[ext_resource type="Texture2D" uid="uid://dd5ujs7xcg2uo" path="res://assets/gfx/title/title/title29.png" id="30_ymeal"]
[ext_resource type="Texture2D" uid="uid://rwgms0fnkfgc" path="res://assets/gfx/title/title/title30.png" id="31_rstbj"]
[ext_resource type="Texture2D" uid="uid://qtxhftcermia" path="res://assets/gfx/title/title/title31.png" id="32_lwnfi"]
[ext_resource type="Texture2D" uid="uid://1ifiq5xqkocv" path="res://assets/gfx/title/title/title32.png" id="33_03sp6"]
[ext_resource type="Texture2D" uid="uid://c5acrnaodq388" path="res://assets/gfx/title/title/title33.png" id="34_jm0r8"]
[ext_resource type="Texture2D" uid="uid://bfree27hallwt" path="res://assets/gfx/title/title/title34.png" id="35_rlfpb"]
[ext_resource type="Texture2D" uid="uid://c0f23fl6wfolp" path="res://assets/gfx/title/title/title35.png" id="36_4cprp"]
[ext_resource type="Texture2D" uid="uid://cpuarkgtksmsm" path="res://assets/gfx/title/title/title36.png" id="37_3jgvg"]
[ext_resource type="Texture2D" uid="uid://b1iuwruu1v5m7" path="res://assets/gfx/title/title/title37.png" id="38_k7vjp"]
[ext_resource type="Texture2D" uid="uid://buw8kn3f1q8hp" path="res://assets/gfx/title/title/title38.png" id="39_f32he"]
[ext_resource type="Texture2D" uid="uid://dlqpvvomw8wn7" path="res://assets/gfx/title/title/title39.png" id="40_2w8vv"]
[ext_resource type="Texture2D" uid="uid://b7rll2yvugkul" path="res://assets/gfx/title/title-border.png" id="49_escde"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_58p3f"]
content_margin_left = 0.0
content_margin_top = 1.0
content_margin_right = 0.0
content_margin_bottom = 1.0
bg_color = Color(0.807843, 0.807843, 0.807843, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k715e"]
content_margin_left = 0.0
content_margin_top = 1.0
content_margin_right = 0.0
content_margin_bottom = 1.0
bg_color = Color(0.313726, 0.32549, 0.435294, 1)

[sub_resource type="Theme" id="Theme_je0ac"]
default_font = ExtResource("23_leh6x")
default_font_size = 20
HSlider/icons/grabber = ExtResource("22_l5lr2")
HSlider/icons/grabber_disabled = ExtResource("22_l5lr2")
HSlider/icons/grabber_highlight = ExtResource("22_l5lr2")
HSlider/styles/grabber_area = SubResource("StyleBoxFlat_58p3f")
HSlider/styles/grabber_area_highlight = SubResource("StyleBoxFlat_58p3f")
HSlider/styles/slider = SubResource("StyleBoxFlat_k715e")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8sq5c"]
texture = ExtResource("22_ud1aq")
texture_margin_left = 70.0
texture_margin_top = 65.0
texture_margin_right = 40.0
texture_margin_bottom = 65.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yye0d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tpi4i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kkn46"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pq2ih"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a2k5v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fv64k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_312fm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gxvjy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wu8nb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ahmqk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gkv2k"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_5d2yg"]
streams_count = 4
stream_0/stream = ExtResource("24_fmnmr")
stream_1/stream = ExtResource("25_l2ewj")
stream_2/stream = ExtResource("26_4t44w")
stream_3/stream = ExtResource("27_8sg8g")

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eftrj")
bg_textures = Array[Texture]([ExtResource("1_ex27u"), ExtResource("2_vmynn"), ExtResource("3_edyp1"), ExtResource("4_h1k4c"), ExtResource("5_vf0nx"), ExtResource("6_rk0lv"), ExtResource("7_bhn2e"), ExtResource("8_8y2w8"), ExtResource("9_q1635"), ExtResource("10_2omyj"), ExtResource("11_57ewf"), ExtResource("12_virjh"), ExtResource("13_7e1k7"), ExtResource("14_2ha8f"), ExtResource("15_xro4g"), ExtResource("16_alte8"), ExtResource("17_173g2"), ExtResource("18_p5q7p"), ExtResource("19_kfmhj"), ExtResource("20_oj31q"), ExtResource("22_e4ar7"), ExtResource("23_escde"), ExtResource("24_m7ugp"), ExtResource("25_bxwna"), ExtResource("26_yuvyo"), ExtResource("27_d8frf"), ExtResource("28_5vp6r"), ExtResource("29_r3lx2"), ExtResource("30_ymeal"), ExtResource("31_rstbj"), ExtResource("32_lwnfi"), ExtResource("33_03sp6"), ExtResource("34_jm0r8"), ExtResource("35_rlfpb"), ExtResource("36_4cprp"), ExtResource("37_3jgvg"), ExtResource("38_k7vjp"), ExtResource("39_f32he"), ExtResource("40_2w8vv")])

[node name="BG" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 19.0
offset_right = 1280.0
offset_bottom = 739.0
texture = ExtResource("1_ex27u")

[node name="Volume" type="GridContainer" parent="."]
layout_mode = 2
offset_left = 167.0
offset_top = 569.0
offset_right = 361.0
offset_bottom = 592.0
theme = SubResource("Theme_je0ac")
columns = 2

[node name="Label" type="Label" parent="Volume"]
layout_mode = 2
theme_override_colors/font_color = Color(0.807843, 0.807843, 0.807843, 1)
text = "MUSIC"

[node name="VolumeSlider" parent="Volume" instance=ExtResource("24_7gifx")]
layout_mode = 2
size_flags_vertical = 4
bus_name = "Music"

[node name="Label2" type="Label" parent="Volume"]
layout_mode = 2
theme_override_colors/font_color = Color(0.807843, 0.807843, 0.807843, 1)
text = "SFX"

[node name="VolumeSlider2" parent="Volume" instance=ExtResource("24_7gifx")]
layout_mode = 2
size_flags_vertical = 4
bus_name = "Sfx"

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(264, 136)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -479.0
offset_top = -17.0
offset_right = -215.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_8sq5c")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.065
anchor_right = 0.976
anchor_bottom = 0.856
offset_left = 23.0
offset_top = -21.075
offset_right = -13.384
offset_bottom = 24.32
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.984314, 0.945098, 0.811765, 1)
theme_override_colors/font_hover_color = Color(0.984314, 0.945098, 0.811765, 1)
theme_override_fonts/font = ExtResource("23_leh6x")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_yye0d")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_tpi4i")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_kkn46")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_pq2ih")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_a2k5v")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_fv64k")
theme_override_styles/hover = SubResource("StyleBoxEmpty_312fm")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_gxvjy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wu8nb")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ahmqk")
theme_override_styles/normal = SubResource("StyleBoxEmpty_gkv2k")
text = "START"
alignment = 0

[node name="QuitButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.984314, 0.945098, 0.811765, 1)
theme_override_colors/font_hover_color = Color(0.984314, 0.945098, 0.811765, 1)
theme_override_fonts/font = ExtResource("23_leh6x")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_yye0d")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_tpi4i")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_kkn46")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_pq2ih")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_a2k5v")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_fv64k")
theme_override_styles/hover = SubResource("StyleBoxEmpty_312fm")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_gxvjy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wu8nb")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ahmqk")
theme_override_styles/normal = SubResource("StyleBoxEmpty_gkv2k")
text = "EXIT"
alignment = 0

[node name="sfx_button" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_5d2yg")

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Title-border" type="Sprite2D" parent="."]
position = Vector2(640, 380)
texture = ExtResource("49_escde")

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
